Makes default tooltip $gray-500. Fixes tooltip flicker by adding pointer-events: none to tooltip

--- a/sass-starter/abstracts/colors.scss
+++ b/sass-starter/abstracts/colors.scss
@@ -29,7 +29,6 @@ $alert-variants: (
 ) !default;
 
 $tooltip-variants: (
-  dark: $gray-500,
   info: $blue-200,
   success: $green-100,
   error: $red-100,
